# classtab

./: .gitignore  README.md  manage.py  mypy.ini  pyproject.toml
.github/workflows/: test.yml
classtab/: asgi.py  settings.py  urls.py  wsgi.py
classtab_main/: apps.py  models.py  tests.py  urls.py  views.py  views_clazz_table_oneshot.py  views_info_list_oneshot.py
classtab_main/templates/classtab_main/: form_clazz_table_oneshot.html  form_info_list_oneshot.html  index.html  show_clazz_table_oneshot.html  show_info_list_oneshot.html
oneshot/: apps.py  urls.py  views.py  views_clazz_table.py  views_info_list.py
oneshot/dtos/: clazz_table.py  info_list.py  notification_list.py
oneshot/templates/oneshot/: form_clazz_table.html  form_info_list.html  form_notification_list.html  index.html  show_notification_list.html
oneshot/views/: clazz_table.py  info_list.py  notification_list.py
