[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "classtab"
version = "0.1.0"

dependencies = [
	"Django == 4.1.*",
	"webclass-parser @ git+https://github.com/u120022/webclass-parser.git@dev"
]

[project.optional-dependencies]
types = [
	"django-stubs == 1.13.*",
]
